syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.academy";
option java_outer_classname = "ChavePixOuterClass";

package br.com.zup.academy;

service ChavePixService {
  rpc cadastrar (ChavePixRequest) returns (ChavePixResponse) {}
}

enum TipoChave{
  DESCONHECIDO = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

enum TipoConta{
  TIPO_DESCONHECIDO = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message ChavePixRequest {
  string idCliente = 1;
  TipoChave tipoChave = 2;
  string valorChave = 3;
  TipoConta tipoConta = 4;
}

message ChavePixResponse {
  string idPix = 1;
  string idCliente = 2;
}